# my-python-project

./: .gitignore  .new.sh.swp  A  AI_FIX_REPORT.md  CHECKPOINT_E2E_VERIFY.md  CMakeLists.txt  DemoService.java  HELLO_PLAN.md  Info.md  README  README.md  Readme.md  _ARIA_AUDIT_REPORT.txt  app.py  change.txt  collab.txt  contribution.md  contribution.txt  data.json  demo.txt  dragon.txt  example.py  example.txt  file1.txt  final-full-snapshot.txt  fork.txt  gsgsgg  hello.txt  index.html  intro.txt  lab.txt  main.js  main.py  mychanges.txt  myfile.txt  mywork.md  notes.txt  practice.txt  results.json  test.txt  (+4 more)
.github/workflows/: build.yml  deploy.yml  html_test.yml
docs/: FLOW_PILOT_V5_0_4_HELLO_WORLD.md  api.md  index.md  workflow.md
include/: Camera.h  Entity.h  EntityManager.h  Math.h  Mob.h  Perlin.h  Raycast.h
repo_mining/: test.txt
src/: Camera.cpp  Chunk.cpp  Chunk.h  Entity.cpp  EntityManager.cpp  MeshBuilder.cpp  MeshBuilder.h  Mob.cpp  Raycast.cpp  Renderer.cpp  Renderer.h  World.cpp  World.h  main.cpp  parser.ts
